# libint-1

./: INSTALL  configure
export/: Makefile
export/cmake/: CMakeLists.txt.export
include/libint2/: basis.h.in  solidharmonics.h
python/: CMakeLists.txt  setup.py.in  test_libint2.py
python/src/libint2/: __init__.py  _libint2.cc  basis.py  expression.py  hf.py
